# CocktailEngine

./: .clang-format  .gitmodules  .natvis  CMakeLists.txt  LICENSE  README.md
Runtime/Core/: CMakeLists.txt
Runtime/Core/include/Cocktail/Core/: Array.hpp  Cocktail.hpp  Color.hpp  DataType.hpp  Enum.hpp  Exception.hpp  Export.hpp  Extent2D.hpp  Extent3D.hpp  Flags.hpp  HashMap.hpp  HashSet.hpp  HashTable.hpp  LinkedList.hpp  Object.hpp  StaticArray.hpp  String.hpp  StringView.hpp
Runtime/Core/include/Cocktail/Core/Application/: App.hpp  Application.hpp  ServiceContainer.hpp  ServiceFacade.hpp  ServiceProvider.hpp
Runtime/Core/include/Cocktail/Core/Asset/: AssetExporter.hpp  AssetImporter.hpp  AssetLoader.hpp  AssetManager.hpp
Runtime/Core/include/Cocktail/Core/IO/: EncodingMode.hpp
Runtime/Core/include/Cocktail/Core/Image/: GammaSpace.hpp  Image.hpp  ImageArray.hpp  ImageInfo.hpp  ImageLoader.hpp  ImageRawFormat.hpp  ImageServiceProvider.hpp  ImageView.hpp  PixelFormat.hpp
Runtime/Core/include/Cocktail/Core/Log/: ConsoleLogChannel.hpp  Log.hpp  LogCategory.hpp  LogChannel.hpp  LogEntry.hpp  LogLevel.hpp  LogManager.hpp  LogServiceProvider.hpp
Runtime/Core/include/Cocktail/Core/Math/: Angle.hpp  BoxCorner.hpp  Constants.hpp  EulerAngles.hpp  Interpolation.hpp  InterpolationCurve.hpp  Intersection.hpp  Plane.hpp  Quaternion.hpp
Runtime/Core/include/Cocktail/Core/Memory/: Memory.hpp  ObjectMemoryUtils.hpp  Ref.hpp  RefCounter.hpp  SharedFromThis.hpp  SharedPtr.hpp  SizeType.hpp  UniquePtr.hpp  WeakPtr.hpp  WeakRef.hpp
Runtime/Core/include/Cocktail/Core/Meta/: Extends.hpp  Implements.hpp  Inherit.hpp  Interface.hpp
Runtime/Core/include/Cocktail/Core/Signal/: Connection.hpp  Observable.hpp  Signal.hpp
Runtime/Core/include/Cocktail/Core/System/: SystemError.hpp  SystemMemory.hpp  SystemServiceProvider.hpp
Runtime/Core/include/Cocktail/Core/Utility/: AcyclicGraph.hpp  Any.hpp  ByteArray.hpp  ByteArrayView.hpp  CharUtils.hpp  CompositeKey.hpp  EnumMap.hpp  ExceptionUtils.hpp  FileUtils.hpp  Finder.hpp  FixedArray.hpp  FunctionTraits.hpp  InOptional.hpp  LazyValue.hpp  ObjectPool.hpp  Optional.hpp  ParameterPack.hpp  RefTraits.hpp  StorageUtils.hpp  StringConvertion.hpp  StringFormater.hpp  StringUtils.hpp  TranslatorCast.hpp  ValueGuard.hpp
Runtime/Core/src/Cocktail/Core/: Color.cpp  DataType.cpp  Exception.cpp  Object.cpp  String.cpp  StringView.cpp
Runtime/Core/src/Cocktail/Core/Application/: App.cpp  Application.cpp  ServiceContainer.cpp  ServiceProvider.cpp
Runtime/Core/src/Cocktail/Core/Image/: Image.cpp  ImageArray.cpp  ImageInfo.cpp  ImageLoader.cpp  ImageRawFormat.cpp  ImageServiceProvider.cpp  ImageView.cpp  PixelFormat.cpp
Runtime/Core/src/Cocktail/Core/Log/: ConsoleLogChannel.cpp  Log.cpp  LogCategory.cpp  LogChannel.cpp  LogManager.cpp  LogServiceProvider.cpp  NullLogChannel.cpp  NullLogChannel.hpp
Runtime/Core/src/Cocktail/Core/Memory/: Memory.cpp  RefCounter.cpp
Runtime/Core/src/Cocktail/Core/Signal/: Connection.cpp
Runtime/Core/src/Cocktail/Core/System/: SystemServiceProvider.cpp  SystemServiceProviderImpl.hpp
Runtime/Core/src/Cocktail/Core/Utility/: Any.cpp  ByteArray.cpp  ByteArrayView.cpp  ExceptionUtils.cpp  FileUtils.cpp  Finder.cpp  StorageUtils.cpp  StringConvertion.cpp
Runtime/Vulkan/: CMakeLists.txt
Runtime/Vulkan/include/Cocktail/Vulkan/: ApiVersion.hpp  Export.hpp  RenderDeviceCreateInfo.hpp  VersionDescriptor.hpp  Vulkan.hpp  VulkanServiceProvider.hpp
Runtime/Vulkan/resources/: depth_resolve.frag  depth_resolve.sp  depth_resolve.vert  depth_stencil_resolve.frag  depth_stencil_resolve.frag.spv  depth_stencil_resolve.vert
Runtime/Vulkan/src/Cocktail/Vulkan/: DepthStencilResolverHelper.cpp  DepthStencilResolverHelper.hpp  ExtensionManager.cpp  ExtensionManager.hpp  RenderDevice.cpp  RenderDevice.hpp  RenderDeviceCreateInfo.hpp  Semaphore.cpp  Semaphore.hpp  SemaphoreCreateInfo.hpp  VersionDescriptor.cpp  Volk.hpp  VolkService.cpp  VolkService.hpp  Vulkan.cpp  VulkanServiceProvider.cpp  VulkanUtils.cpp  VulkanUtils.hpp
Runtime/Vulkan/src/Cocktail/Vulkan/Buffer/: Buffer.cpp  Buffer.hpp  BufferAllocator.cpp  BufferAllocator.hpp  BufferPool.cpp  BufferPool.hpp  BufferView.cpp  BufferView.hpp
Runtime/Vulkan/src/Cocktail/Vulkan/Command/: CommandList.cpp  CommandList.hpp  Fence.cpp  Fence.hpp
Runtime/Vulkan/src/Cocktail/Vulkan/Context/: FrameContext.cpp  FrameContext.hpp  FrameContextCreateInfo.hpp  PresentationContext.cpp  PresentationContext.hpp  PresentationContextCreateInfo.hpp  RenderContext.cpp  RenderContext.hpp  RenderSurface.cpp  RenderSurface.hpp  Swapchain.cpp  Swapchain.hpp  SwapchainCreateInfo.hpp
Runtime/Vulkan/src/Cocktail/Vulkan/Debug/: DebugMessenger.cpp  DebugMessenger.hpp  DebugMessengerCreateInfo.hpp
Runtime/Vulkan/src/Cocktail/Vulkan/DescriptorSet/: DescriptorSet.cpp  DescriptorSet.hpp  DescriptorSetCreateInfo.hpp  DescriptorUpdateTemplate.cpp  DescriptorUpdateTemplate.hpp  DescriptorUpdateTemplateCreateInfo.hpp
Runtime/Vulkan/src/Cocktail/Vulkan/Framebuffer/: AttachmentBuffer.cpp  AttachmentBuffer.hpp  DepthResolver.cpp  DepthResolver.hpp  Framebuffer.cpp  Framebuffer.hpp  RenderBuffer.cpp  RenderBuffer.hpp  RenderBufferCreateInfo.hpp  RenderPass.cpp  RenderPass.hpp  RenderPassBuilder.cpp  RenderPassBuilder.hpp  RenderPassCreateInfo.hpp
Runtime/Vulkan/src/Cocktail/Vulkan/Memory/: DeviceMemory.cpp  DeviceMemory.hpp  DeviceMemoryCreateInfo.hpp
Runtime/Vulkan/src/Cocktail/Vulkan/Pipeline/: ComputePipeline.cpp  ComputePipeline.hpp  ComputePipelineCreateInfo.hpp  GraphicPipeline.cpp  GraphicPipeline.hpp  GraphicPipelineCreateInfo.hpp  Pipeline.cpp  Pipeline.hpp  PipelineCache.cpp  PipelineCache.hpp  PipelineCacheCreateInfo.hpp  PipelineCacheSaver.cpp  PipelineCacheSaver.hpp  PipelineManager.cpp  PipelineManager.hpp
Runtime/Vulkan/src/Cocktail/Vulkan/Queue/: QueueFamily.cpp  QueueFamily.hpp  QueueFamilyContext.cpp  QueueFamilyContext.hpp  QueueSubmit.cpp  QueueSubmit.hpp  QueueSubmitBatch.cpp  QueueSubmitBatch.hpp  QueueSubmitDependency.hpp  QueueSubmitter.cpp  QueueSubmitter.hpp  (+2 more)
(+875 files in other folders)
